--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    
+    <link rel="sortcut icon" href="https://img-9gag-fun.9cache.com/photo/aWg40j6_460s.jpg" type="image/x-icon">
     <title>KondiProject</title>
     <style>
         * {
