--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           top: 0;
           bottom: 0;
           right: 0;
-          width: 100%;
-          height: 100%;
+          width: 500px;
+          height: 600px;
           border: none;
         }
         h2{
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Header</h1>
+        <h1>Igen</h1>
         
       </div>
       <div>
