--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         .topnav {
           overflow: hidden;
           background-color: rgb(255, 136, 0);
+          size: 40px;
         }
         
         
@@ -64,8 +65,8 @@
           top: 0;
           bottom: 0;
           right: 0;
-          width: 500px;
-          height: 600px;
+          width: 700px;
+          height: 300px;
           border: none;
         }
         h2{
